[update] new tree model

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
     <model-viewer
-        src="./assets/maple_tree.glb"
+        src="./assets/deciduous_tree.glb"
         alt="A virtual tree waiting to grow"
         shadow-intensity="1"
         camera-controls
